# Curiosity-Cat

./: .gitignore  APPLE_DEVELOPER.md  BUILD_STATUS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  FAQ.md  LICENSE  MANIFEST.in  README.md  download.html  index.html  llms.txt  package.json  privacy.html  pyproject.toml  quickstart.html
app/: .gitignore  README.md
app/packaging/: build-sidecar.sh  ccat-engine.spec  ccat_engine_entry.py
app/packaging/homebrew/: curiosity-cat.rb
app/src/: approval.html  board.html  feed.html  purr.html  settings.html  slider.html
app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  sidecar.rs  tray.rs  watcher.rs
app/src/css/: adventure-slider.css  app.css
app/src/firstrun/: choose.html  compile.html  prove.html
app/src/js/: adventure-slider.js  approval.js  board.js  feed.js  purr.js  settings-store.js  settings.js  sidecar-client.js  skins.js  slider-page.js  territory-map.js  tray-state.js
ar/: index.html
assets/: slider.css  slider.js
curiosity_cat/: card.py  cli.py  core.py  discover.py  events.py  gate.py  listen.py  mcp_server.py  meow.py  purr.py  serve.py
curiosity_cat/data/danger-map/: schema.json
curiosity_cat/data/standing-orders/: research-agent.md
curiosity_cat/data/stories/: 001-the-shiny-thing.md  002-the-helpful-stranger.md  003-the-open-door.md  005-the-polite-document.md  006-the-helpful-agent.md
danger-map/: schema.json
docs/: MEDIA_LIST_SS_EXECUTABLE.md  api.md  integration-guide.md  product-brief-v4.md  product-brief.md  technical-spec.md  translations-to-verify.md
docs/app/: APP_SPEC.md  SIGNING.md  sandbox-deny-findings.md  upstream-report.md
docs/media-pack/: README.md
docs/media-pack/ar/: 01-press-release.md  02-one-pager.md  03-founder-statement.md  04-key-facts.md  05-media-faq.md  06-show-explainer.md
docs/media-pack/archive/: show-explainer.md
docs/media-pack/en/: 01-press-release.md  02-one-pager.md  03-founder-statement.md  04-key-facts.md  05-media-faq.md  06-proof-story.md  07-show-hn.md  08-reddit-post.md
docs/media-pack/hi/: 01-press-release.md  02-one-pager.md  03-founder-statement.md  04-key-facts.md  05-media-faq.md  06-show-explainer.md
docs/media-pack/ta/: 01-press-release.md  02-one-pager.md  03-founder-statement.md  04-key-facts.md  05-media-faq.md  06-show-explainer.md
docs/media-pack/zh/: 01-press-release.md  02-one-pager.md  03-founder-statement.md  04-key-facts.md  05-media-faq.md  06-show-explainer.md
hi/: index.html
policies/: scope-policy-template.json
policies/example-policies/: education.json  healthcare.json
site/: CNAME
site/css/: adventure-slider.css
site/js/: adventure-slider.js  skin-unlocker.js  skins.js
standing-orders/: coding-agent.md  enterprise-analyst.md  general-safety.md  research-agent.md
stories/: 001-first-close-call.md  001-the-shiny-thing.md  002-the-helpful-readme.md  002-the-helpful-stranger.md  003-the-redirecting-api.md  004-the-env-in-the-error.md  004-the-friendly-redirect.md  005-the-package-that-typos.md  005-the-polite-document.md  006-the-helpful-agent.md  006-the-polite-pdf.md  007-the-leaking-query.md
supabase/: README.md  config.json  config.toml
supabase/migrations/: 001_danger_map.sql  002_align_threat_vocabulary.sql  003_network_layer.sql
ta/: index.html
tests/: test_app_bundle.py  test_card.py  test_cli.py  test_core.py  test_discover.py  test_events.py  test_gate.py  test_listen.py  test_mcp_server.py  test_meow.py  test_purr.py  test_serve.py
tests/js/: test_settings_store.js  test_territory_map.js  test_tray_state.js
tools/: README.md  emit_dmg_checksum.sh  find_window.swift  screen_recording_ok.swift  screenshot_guard_board.py  sign_and_notarize.sh
zh/: index.html
(+7 files in other folders)
