[package]
name = "curiosity-cat"
version = "0.1.0"
description = "Curiosity Cat — menu bar shell for the AI agent safety framework"
authors = ["Mark Cleary"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "curiosity-cat"
path = "src/main.rs"
