[package]
name = "curiosity-cat"
version = "0.1.0"
description = "Curiosity Cat — menu bar shell for the AI agent safety framework"
authors = ["Mark Cleary"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[[bin]]
name = "curiosity-cat"
path = "src/main.rs"
